metadata/force-app/main/default/objects/CampaignMember/fields/Account_CSM_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Owner__c</fullName>
    <description>BO-1567: Formula field to pull CSM Owner info for the Campaign Member Contact.</description>
    <formula>Contact.Account.CSM_Owner__r.FirstName &amp; &quot; &quot; &amp;  Contact.Account.CSM_Owner__r.LastName</formula>
    <label>Account CSM Owner</label>
    <type>Text</type>
</CustomField>