metadata/force-app/main/default/objects/CampaignMember/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>BO-1567: Formula field to pull Account name for the Campaign Member Contact.</description>
    <formula>Contact.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>