metadata/force-app/main/default/objects/CampaignMember/fields/Admin_Defective_Member__c.field-meta.xml
<CustomField>
    <fullName>Admin_Defective_Member__c</fullName>
    <formula>AND( 
BEGINS(FCR_Lead_Contact_18_Digit_ID__c, &apos;00Q&apos;), 
OR( 
Lead.Id = NULL, 
Lead.IsConverted = True) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Defective Member</label>
    <type>Checkbox</type>
</CustomField>