metadata/force-app/main/default/objects/CampaignMember/fields/bizible2__Touchpoint_Status_Contact__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_Status_Contact__c</fullName>
    <label>Touchpoint Status (Contact)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>