metadata/force-app/main/default/objects/CampaignMember/fields/bizible2__Touchpoint_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_Status_Date__c</fullName>
    <label>Touchpoint Status Date</label>
    <type>DateTime</type>
</CustomField>