metadata/force-app/main/default/objects/CampaignMember/fields/bizible2__Touchpoint_Status_Lead__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_Status_Lead__c</fullName>
    <label>Touchpoint Status (Lead)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>