metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Actionable__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Actionable__c</fullName>
    <description>wd field
True if the response status was opened. Indicates response was actionable.</description>
    <formula>AND(
NOT(
OR(
ISPICKVAL(FCR_Response_Status__c,&quot;Resolved - No Action Required&quot;), 
ISPICKVAL(FCR_Response_Status__c,&quot;Resolved - Already Engaged&quot;), 
ISPICKVAL(FCR_Response_Status__c,&quot;Not a Response&quot;),
ISPICKVAL(FCR_Response_Status__c,&quot;Legacy&quot;), 
ISPICKVAL(FCR_Response_Status__c,&quot;&quot;))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the response status was opened. Indicates response was actionable.</inlineHelpText>
    <label>Actionable</label>
    <type>Checkbox</type>
</CustomField>