metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Count__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Count__c</fullName>
    <description>wd field
Evaluates to 1. Use for reporting to count responses.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluates to 1. Use for reporting to count responses.</inlineHelpText>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>