metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Created_By_Formula__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Created_By_Formula__c</fullName>
    <description>wd field
Allows reporting visibility on who created the campaign member. The system field is not exposed in reports. Audit field.</description>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Allows reporting visibility on who created the campaign member. The system field is not exposed in reports. Audit field.</inlineHelpText>
    <label>Created By (Formula)</label>
    <type>Text</type>
</CustomField>