metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Current_Stage_In_Funnel_Date__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Current_Stage_In_Funnel_Date__c</fullName>
    <description>wd field
Displays funnel date for current stage in the funnel. Used for report filters.</description>
    <formula>IF ( 
OR( 
ISPICKVAL(FCR_Response_Status__c, &quot;&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Resolved - No Action Required&quot; ),
ISPICKVAL(FCR_Response_Status__c, &quot;Resolved - Merged&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Disqualified&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Nurture/Marketing&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Resolved - Already Engaged&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Resolved - Opportunity Deleted&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Resolved - Opportunity Lost&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Resolved - Opportunity Won&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Unmapped&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Legacy&quot; ), 
ISPICKVAL(FCR_Response_Status__c, &quot;Not a Response&quot;)),NULL , 

IF( Neg__c = TRUE, FCR_SQR_Date__c, 
IF( VOC__c = TRUE, FCR_SQR_Date__c, 
IF( Prop__c = TRUE, FCR_SQR_Date__c,
IF( Demo__c = TRUE, FCR_SQR_Date__c, 

IF( FCR_SQR__c = TRUE, FCR_SQR_Date__c, 
IF( FCRM_FCR_SAL__c = TRUE, SAL_Date__c, 
IF( FCR_SAR__c = TRUE, FCR_SAR_Date__c , 
IF( FCR_QR__c = TRUE, FCR_QR_Date__c , 
IF( FCR_Inquiry_Target__c = TRUE, FCR_Inquiry_Target_Date__c , 
NULL ) 
)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays funnel date for current stage in the funnel. Used for report filters.</inlineHelpText>
    <label>Current Stage In Funnel Date</label>
    <type>Date</type>
</CustomField>