metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_FCCRM_Threshold_On_Create__c.field-meta.xml
<CustomField>
    <fullName>CFCR_FCCRM_Threshold_On_Create__c</fullName>
    <description>wd field
Displays FCCRM Score threshold on create - populated by sync.</description>
    <inlineHelpText>Displays FCCRM Score threshold on create - populated by sync.</inlineHelpText>
    <label>FCCRM Threshold (On Create)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>