metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Industry_Formula__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Industry_Formula__c</fullName>
    <description>wd field
Displays Industry of related lead or Account.</description>
    <formula>IF( NOT(ISBLANK(ContactId)), text( Contact.Account.Industry),
text(Lead.Industry))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays Industry of related lead or Account.</inlineHelpText>
    <label>Industry Formula</label>
    <type>Text</type>
</CustomField>