metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Lead_Source_Formula__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Lead_Source_Formula__c</fullName>
    <description>wd field
displays lead source of related lead/contact. used for reporting because the campaign member field is not available in campaign member field reports.</description>
    <formula>IF( NOT(ISBLANK(ContactId)), text( Contact.LeadSource), 
text(Lead.LeadSource))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>displays lead source of related lead/contact. used for reporting because the campaign member field is not available in campaign member field reports.</inlineHelpText>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>