metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Lost_Reason__c</fullName>
    <description>wd field</description>
    <formula>TEXT(FCR_Opportunity__r.Primary_Loss_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Reason</label>
    <type>Text</type>
</CustomField>