metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_MQL_to_Won__c.field-meta.xml
<CustomField>
    <fullName>CFCR_MQL_to_Won__c</fullName>
    <description>wd field
Days between MQL and Won</description>
    <formula>IF( FCR_Opportunity_Closed_Won__c = &quot;True&quot;, FCR_Opportunity_Closed_Date__c - FCR_QR_Date__c , null)</formula>
    <inlineHelpText>Days between MQL and Won</inlineHelpText>
    <label>MQL to Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>