metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Opportunity_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Opportunity_18_Digit_ID__c</fullName>
    <description>wd field
Displays Opportunity 18 Digit ID for the related opportunity if the Opportunity name field is populated.</description>
    <formula>CASESAFEID( FCR_Opportunity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays Opportunity 18 Digit ID for the related opportunity if the Opportunity name field is populated.</inlineHelpText>
    <label>Opportunity 18 Digit ID</label>
    <type>Text</type>
</CustomField>