metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Opportunity_Stage__c</fullName>
    <description>wd field
Displays stage of related opportunity if opportunity name is populated.</description>
    <formula>TEXT( FCR_Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays stage of related opportunity if opportunity name is populated.</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>