metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Still_in_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_Inquiry__c</fullName>
    <description>wd field
Checked if Current Stage in Funnel is &quot;1. Inquiry&quot;</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = &quot;1. Inquiry&quot;</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is &quot;1. Inquiry&quot;</inlineHelpText>
    <label>Still in Inquiry</label>
    <type>Checkbox</type>
</CustomField>