metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Still_in_SAL__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_SAL__c</fullName>
    <description>wd field
Checked if Current Stage in Funnel is &quot;4. SAL&quot;</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = &quot;4. SAL&quot;</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is &quot;4. SAL&quot;</inlineHelpText>
    <label>Still in SAL</label>
    <type>Checkbox</type>
</CustomField>