metadata/force-app/main/default/objects/CampaignMember/fields/CFCR_Still_in_SQL__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Still_in_SQL__c</fullName>
    <description>wd field
Checked if Current Stage in Funnel is &quot;3. SQL&quot;</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = &quot;3. SQL&quot;</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is &quot;3. SQL&quot;</inlineHelpText>
    <label>Still in SQL</label>
    <type>Checkbox</type>
</CustomField>