metadata/force-app/main/default/objects/CampaignMember/fields/Chatter_Campaign_Information__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Campaign_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter Campaign Information</label>
    <type>Checkbox</type>
</CustomField>