metadata/force-app/main/default/objects/CampaignMember/fields/Current_Lead_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Lead_Contact_Status__c</fullName>
    <description>wd field</description>
    <formula>IF(NOT(ISBLANK( ContactId )), TEXT(Contact.Status__c) , 
TEXT(Lead.Status) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lead/Contact Status</label>
    <type>Text</type>
</CustomField>