metadata/force-app/main/default/objects/CampaignMember/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <description>wd field</description>
    <formula>IF(NOT(ISBLANK(	Demo_Date__c)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>