metadata/force-app/main/default/objects/CampaignMember/fields/Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date__c</fullName>
    <description>wd field</description>
    <formula>FCR_Opportunity__r.Demo_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Date</label>
    <type>Date</type>
</CustomField>