metadata/force-app/main/default/objects/CampaignMember/fields/Demo_to_Prop__c.field-meta.xml
<CustomField>
    <fullName>Demo_to_Prop__c</fullName>
    <description>wd field 
Used by FCI</description>
    <formula>Prop_Date__c - Demo_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># Days from Demo to Proposal - Evaluates to blank if Demo Date is blank.</inlineHelpText>
    <label>Demo to Prop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>