metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Admin_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>FCR_Admin_Opportunity_Status__c</fullName>
    <description>wd field
Administrative field to determine if a response is tied to an opportunity, and if so, the status of that opportunity</description>
    <formula>IF(OR(ISBLANK(ContactId), ISBLANK( FCR_Opportunity__c ), ISPICKVAL(FCR_Response_Status__c, &apos;Resolved - Non-Response RT&apos;) ),
0,
IF(FCR_Opportunity__r.IsClosed ,
IF(FCR_Opportunity__r.IsWon , 2, 3),
1)
)
/*
0 - Lead or no opportunity
1 - Open opportunity
2 - Opportunity closed won
3 - Opportunity closed lost
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Opportunity Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>