metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Admin_Response_Control__c.field-meta.xml
<CustomField>
    <fullName>FCR_Admin_Response_Control__c</fullName>
    <description>wd field
Numeric field to override standard processing of responses during evaluation</description>
    <label>Admin Response Control</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>