metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Admin_Response_Day__c.field-meta.xml
<CustomField>
    <fullName>FCR_Admin_Response_Day__c</fullName>
    <description>wd field
Converts the response date field (date time) to a response date for report processing</description>
    <formula>if(ISBLANK(FCR_Response_Date__c),DATE(1970,1,1),DATEVALUE(FCR_Response_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Day</label>
    <type>Date</type>
</CustomField>