metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Admin_SyncPending__c.field-meta.xml
<CustomField>
    <fullName>FCR_Admin_SyncPending__c</fullName>
    <description>wd field
Set when a field sync to this response is pending (async)
1 - Sync the fields if SyncOnUpdate
2 - Sync the fields if SyncOnCreate
3 - Clear the fields.</description>
    <label>Admin SyncPending</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>