metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Admin_Update_Counter__c.field-meta.xml
<CustomField>
    <fullName>FCR_Admin_Update_Counter__c</fullName>
    <description>wd field
This counter is changed any time this object is updated by the response management system. Look for changes in this value during validation rules to disable the rule and allow the update.</description>
    <label>Admin Update Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>