metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Campaign_Repeat_Parent__c.field-meta.xml
<CustomField>
    <fullName>FCR_Campaign_Repeat_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>wd field
Lookup to the cascade parent campaign, or the campaign (if this is not a repeat)</description>
    <inlineHelpText>This field is used in reporting to group all responses by Repeat Parent Campaign.</inlineHelpText>
    <label>Campaign Name (Repeat Parent)</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>