metadata/force-app/main/default/objects/CampaignMember/fields/FCR_CascadeID__c.field-meta.xml
<CustomField>
    <fullName>FCR_CascadeID__c</fullName>
    <description>wd field
This formula field is used to simplify queries for cascaded campaignmembers.
First part is the campaignID if there is no parent, or the parent campaignID if there is. Second part is the contactID if present, otherwise the lead ID</description>
    <formula>IF(ISBLANK(Campaign.FCR_CascadeParent__c), CampaignId , Campaign.FCR_CascadeParent__c ) + BLANKVALUE( ContactId , LeadId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin_CascadeID</label>
    <type>Text</type>
</CustomField>