metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>FCR_Converted_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Indicates that the response was active when the lead was converted</description>
    <label>Converted Lead</label>
    <type>Checkbox</type>
</CustomField>