metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Current_Lead_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>FCR_Current_Lead_Contact_Status__c</fullName>
    <description>wd field
Displays the current status of the related lead or contact. Looks at the standard lead status field or the Full Circle Insights Contact Status field.</description>
    <formula>IF(NOT(ISBLANK( ContactId )), TEXT(Contact.FCR_Status__c) , TEXT(Lead.Status) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the current status of the related lead or contact.</inlineHelpText>
    <label>Current Lead/Contact Status</label>
    <type>Text</type>
</CustomField>