metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Dated_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>FCR_Dated_Opportunity_Amount__c</fullName>
    <description>wd field
Opportunity amount based on dated conversion - set during campaign influence</description>
    <label>Dated Opportunity Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>