metadata/force-app/main/default/objects/CampaignMember/fields/FCR_FCCRM_Logo__c.field-meta.xml
<CustomField>
    <fullName>FCR_FCCRM_Logo__c</fullName>
    <description>wd field</description>
    <formula>IMAGE(&quot;/resource/Full_Circle_Logo_New&quot;, &quot;Full Circle CRM&quot;,25, 80)</formula>
    <label>||</label>
    <type>Text</type>
</CustomField>