metadata/force-app/main/default/objects/CampaignMember/fields/FCR_First_Owner_Assigned__c.field-meta.xml
<CustomField>
    <fullName>FCR_First_Owner_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>wd field</description>
    <inlineHelpText>First Owner (non-queue) assigned a response.</inlineHelpText>
    <label>First Owner Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Response_First_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>