metadata/force-app/main/default/objects/CampaignMember/fields/FCR_First_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>FCR_First_Owner_Type__c</fullName>
    <description>wd field
First Owner Assigned Type - User or Queue</description>
    <inlineHelpText>First Owner Assigned Type - User or Queue</inlineHelpText>
    <label>First Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>