metadata/force-app/main/default/objects/CampaignMember/fields/FCR_First_Owner_Worked__c.field-meta.xml
<CustomField>
    <fullName>FCR_First_Owner_Worked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>wd field</description>
    <inlineHelpText>First Owner to set a lead/contact status to a working status when the response is active</inlineHelpText>
    <label>First Owner Worked</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Response_First_Worked</relationshipName>
    <type>Lookup</type>
</CustomField>