metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Inquiry_Target__c.field-meta.xml
<CustomField>
    <fullName>FCR_Inquiry_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Has responded to a Marketing Campaign, or is a Sales Target</description>
    <label>Inquiry</label>
    <type>Checkbox</type>
</CustomField>