metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Inquiry_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_Inquiry_Target_Date__c</fullName>
    <description>wd field
Date Inquiry or Target was set</description>
    <label>Inquiry Date</label>
    <type>Date</type>
</CustomField>