metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Inquiry_to_MQR__c.field-meta.xml
<CustomField>
    <fullName>FCR_Inquiry_to_MQR__c</fullName>
    <description>wd field 
# Days from Inquiry to MQL - Evaluates to blank if MQL Date is blank.</description>
    <formula>FCR_QR_Date__c - FCR_Inquiry_Target_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># Days from Inquiry/Target to MQR/QR</inlineHelpText>
    <label>Inquiry to MQL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>