metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Last_Modified_By_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>FCR_Last_Modified_By_Date_Formula__c</fullName>
    <description>wd field</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By Date Formula</label>
    <type>Date</type>
</CustomField>