metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Last_Modified_By_Formula__c.field-meta.xml
<CustomField>
    <fullName>FCR_Last_Modified_By_Formula__c</fullName>
    <description>wd field</description>
    <formula>LastModifiedBy.FirstName &amp; &quot; &quot; &amp; LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By Formula</label>
    <type>Text</type>
</CustomField>