metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Lead_Contact_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>FCR_Lead_Contact_18_Digit_ID__c</fullName>
    <description>wd field</description>
    <formula>CASESAFEID(BLANKVALUE( ContactId , LeadId ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Contact 18 Digit ID</label>
    <type>Text</type>
</CustomField>