metadata/force-app/main/default/objects/CampaignMember/fields/FCR_LostOpRevenueModel2__c.field-meta.xml
<CustomField>
    <fullName>FCR_LostOpRevenueModel2__c</fullName>
    <description>wd field
Deprecated Field - Use the Campaign Influence Detail object to report on Campaign Influence metrics</description>
    <inlineHelpText>Deprecated Field - Use the Campaign Influence Detail object to report on Campaign Influence metrics</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>