metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Member_Type_On_Create__c.field-meta.xml
<CustomField>
    <fullName>FCR_Member_Type_On_Create__c</fullName>
    <description>wd field
Admin field specifying whether the CampaignMember was originally created by a lead or a contact</description>
    <label>Member Type On Create</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>