metadata/force-app/main/default/objects/CampaignMember/fields/FCR_MQR_to_SAR__c.field-meta.xml
<CustomField>
    <fullName>FCR_MQR_to_SAR__c</fullName>
    <description>wd field 
# Days from MQL to SAL - Evaluates to blank if MQL Date is blank.</description>
    <formula>FCR_SAR_Date__c - FCR_QR_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># Days from MQR/QR to SAR.</inlineHelpText>
    <label>MQL to SAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>